--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
-body{
+body,html{
+	margin: 0;
+	padding: 0;
+}
+.content{
 	font-size: 18px;
 	width: 650px;
 	margin : 0 auto;
@@ -10,4 +14,57 @@ body{
 }
 h1, h2, h3{
 	line-height: 1.6;
+}
+
+#back-black{
+	position: absolute;
+	background-color: black;
+	opacity: 0.96;
+	width: 100%;
+	height: 100%;
+	top:0;
+	z-index: 1;
+}
+
+.pop-up{
+	background-color: #fff;
+	width: 700px;
+	margin:150px auto;
+	border-radius: 5px 5px 5px 5px;
+	text-align: center;
+	overflow: hidden;
+	padding: 20px;
+}
+
+
+.message>p{
+	font-size: 50px;
+	font-weight: bold;
+}
+.choix{
+	margin:0 auto;
+	width: 45%;
+	overflow: hidden;
+	padding: 6px;
+}
+.choix-oui{
+	float: left;
+	padding: 7px;
+	background-color: green;
+	border-radius: 4px 4px 4px 4px;
+	margin-right: 10px
+}
+
+.choix-oui>a,.choix-non>a{
+	text-decoration: none;
+	color: white;
+	text-shadow: 1px 1px 2px #000;
+	font-size: 50px;
+}
+
+.choix-non{
+	float: left;
+	padding: 7px;
+	background-color: red;
+	border-radius: 4px 4px 4px 4px;
 }
