--- a/style.css
+++ b/style.css
@@ -16,29 +16,35 @@ h1, h2, h3{
 	line-height: 1.6;
 }
 
+
+
 #back-black{
-	position: absolute;
+	position: fixed;
 	background-color: black;
 	opacity: 0.96;
 	width: 100%;
 	height: 100%;
 	top:0;
 	z-index: 1;
+	display: none;
 }
 
 .pop-up{
 	background-color: #fff;
 	width: 700px;
-	margin:150px auto;
+	margin:20px auto;
 	border-radius: 5px 5px 5px 5px;
 	text-align: center;
 	overflow: hidden;
 	padding: 20px;
 }
+.img-xx>img{
+	max-width: 63%;
+}
 
 
 .message>p{
-	font-size: 50px;
+	font-size: 30px;
 	font-weight: bold;
 }
 .choix{
@@ -47,7 +53,7 @@ h1, h2, h3{
 	overflow: hidden;
 	padding: 6px;
 }
-.choix-oui{
+#choix-oui{
 	float: left;
 	padding: 7px;
 	background-color: green;
@@ -55,16 +61,75 @@ h1, h2, h3{
 	margin-right: 10px
 }
 
-.choix-oui>a,.choix-non>a{
+#choix-oui>a,#non{
 	text-decoration: none;
 	color: white;
 	text-shadow: 1px 1px 2px #000;
 	font-size: 50px;
 }
 
-.choix-non{
+#non{
+	margin:0!important;
+}
+
+#non:hover{
+	cursor: pointer;
+}
+#choix-non{
 	float: left;
 	padding: 7px;
 	background-color: red;
 	border-radius: 4px 4px 4px 4px;
+}
+
+.bouton-changer{
+	overflow: hidden;
+	max-width: 800px;
+	margin:20px auto;
+	padding-bottom: 10px;
+	padding-top: 10px;
+}
+
+.left{
+	float:left;
+	margin-right: 10px;
+	padding: 20px;
+	color: white;
+	text-shadow: 1px 1px 2px #000;
+}
+
+#back-magenta{
+	background-color: magenta;
+	border-radius: 4px 4px 4px 4px;
+}
+
+#back-magenta:hover{
+	box-shadow: 4px 7px 4px grey;
+	cursor: pointer;
+}	
+
+#police-bleu{
+	background-color: blue;
+	border-radius: 4px 4px 4px 4px;
+}
+
+#police-bleu:hover{
+	box-shadow: 4px 7px 4px grey;
+	cursor: pointer;
+}
+#police-header-green{
+	background-color: green;
+	border-radius: 4px 4px 4px 4px;
+}
+#police-header-green:hover{
+	box-shadow: 4px 7px 4px grey;
+	cursor: pointer;
+}
+#changement-police{
+	background-color: red;
+	border-radius: 4px 4px 4px 4px;
+}
+#changement-police:hover{
+	box-shadow: 4px 7px 4px grey;
+	cursor: pointer;
 }
